--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 lesson_12_conv_networks/data
 lesson_12_conv_networks/testset
 lesson_12_conv_networks/train
+lesson_12_conv_networks/
 lesson_15_semantic_segmentation/PH2Dataset
 lesson_15_semantic_segmentation/PH2Dataset.rar
 lesson_17-18_detection_autoencoders/mnist_data
